[workspace]
members = [
  "crates/macro",
  "crates/cli",
  "crates/config",
  "crates/core",
  "crates/db",
  "crates/vm",
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.102"
config = { path = "crates/config", version = "^0.1.0" } #unified
db = { path = "crates/db", version = "^0.1.0" } #unified
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
indexmap = { version = "2.13.1", features = ["serde"] }
koto = { version = "0.16.1" }
llm = { version = "1.3.7" }
minijinja = { version = "2.19.0", features = ["loader"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = "1.3.0"
rune = { version = "0.14.1", features = ["emit", "std", "tokio"] }
serde = "1.0.228"
serde_json = "1.0.149"
steel-core = { version = "0.8.2" }
surrealdb = { version = "3.0.5" }
syn = { version = "2.0.117", features = ["extra-traits", "full"] }
tokio = "1.51.0"
wasmer = "7.1.0"
wasmi = "1.0.9"

[workspace.dependencies.wasmtime]
version = "43.0.0"
default-features = false
_features = ["runtime"]
features = [
  "async",
  "cache",
  "gc",
  "gc-drc",
  "wat",
  "cranelift",
  "pooling-allocator",
  "component-model",
  "component-model-async",
  "threads",
  "stack-switching",
  "std"
] 

[workspace.package]
rust-version = "1.89"
