[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
surrealdb = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
core = { path = "../core" }
db = { path = "../db" }
config = { path = "../config" }

[[bin]]
name = "krystallizer"
path = "src/main.rs"

[[bin]]
name = "init"
path = "src/init.rs"
