[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
config = { workspace = true } #unified
core.path = "../core"
db = { workspace = true } #unified
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true

[[bin]]
name = "krystallizer"
path = "src/main.rs"

[[bin]]
name = "init"
path = "src/init.rs"
