[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
# serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
llm = { workspace = true, features = ["agent", "anthropic", "api", "google", "logging", "ollama", "openai"] }
rmcp = { workspace = true }
db = { path = "../db" }
config = { path = "../config" }
rune = { workspace = true, optional = true }
minijinja = { workspace = true }
wasmtime = { workspace = true, optional = true }
steel-core = { workspace = true, optional = true }
koto = { workspace = true, optional = true }
wasmi = { workspace = true, optional = true }
wasmer = { workspace = true, optional = true }

[features]
rune = ["dep:rune"]
wasmtime = ["dep:wasmtime"]
wasmer = ["dep:wasmer"]
steel = ["dep:steel-core"]
koto = ["dep:koto"]
wasmi = ["dep:wasmi"]

[lib]
name = "core"
path = "src/libs/mod.rs"
