[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
llm = { workspace = true, features = ["agent", "anthropic", "api", "google", "logging", "ollama", "openai"] }
rmcp.workspace = true
db.path = "../db"
config.path = "../config"
minijinja.workspace = true
vm.path = "../vm"

[lib]
name = "core"
path = "src/libs/mod.rs"
