[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
config = { workspace = true } #unified
db = { workspace = true } #unified
futures.workspace = true
llm = { workspace = true, features = ["agent", "anthropic", "api", "google", "logging", "ollama", "openai"] }
minijinja.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde_json.workspace = true
tokio.workspace = true
vm.path = "../vm"

[lib]
name = "core"
path = "src/libs/mod.rs"
